將選擇彈框挪入Base

--- a/app/src/main/res/layout/popwindow_show_list.xml
+++ b/app/src/main/res/layout/popwindow_show_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/bg_white_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
@@ -9,9 +8,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
+        style="@style/bg_white_style"
         android:layout_width="match_parent"
         android:layout_height="@dimen/d200"
         android:layout_gravity="center_horizontal"
+        android:padding="@dimen/d10"
         android:scrollbars="none"
         tools:listitem="@layout/item_pop_list" />
 
