--- a/app/src/main/res/layout/item_pop_list.xml
+++ b/app/src/main/res/layout/item_pop_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="@dimen/d34"
     android:layout_margin="@dimen/d8"
     android:gravity="center"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_content"
@@ -13,5 +13,10 @@
         android:layout_marginRight="@dimen/d5"
         android:ellipsize="middle"
         android:gravity="center" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d1"
+        android:background="@color/title_black10" />
 
 </LinearLayout>
