--- a/app/src/main/res/layout/aty_check_wallet_info.xml
+++ b/app/src/main/res/layout/aty_check_wallet_info.xml
@@ -30,11 +30,11 @@
         <TextView
             android:id="@+id/tv_account_address_value"
             style="@style/black_text_style"
-            android:ellipsize="middle"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
             android:layout_toLeftOf="@+id/ib_copy"
             android:layout_toRightOf="@+id/tv_address_key"
+            android:ellipsize="middle"
             android:gravity="center|right"
             android:textColor="@color/value_black70" />
 
@@ -54,24 +54,26 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_address_key"
             android:layout_marginLeft="@dimen/d10"
-            android:layout_marginTop="@dimen/d2"
+            android:layout_marginTop="@dimen/d16"
             android:layout_toRightOf="@+id/tv_currency_key"
             android:gravity="bottom|right"
             android:orientation="horizontal">
 
-            <Spinner
-                android:id="@+id/sp_select"
+            <TextView
+                android:id="@+id/tv_currency"
+                style="@style/black_text_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_spinner"
-                android:dropDownHorizontalOffset="-10dp"
-                android:dropDownVerticalOffset="@dimen/d1"
-                android:gravity="left|center"
-                android:minWidth="@dimen/d70"
-                android:padding="@dimen/d1"
-                android:popupBackground="@color/transparent"
-                android:spinnerMode="dropdown" />
+                android:layout_marginRight="@dimen/d5"
+                android:textSize="@dimen/text_size_12" />
 
+            <Button
+                android:id="@+id/btn_select_currency"
+                android:layout_width="@dimen/d17"
+                android:layout_height="@dimen/d17"
+                android:background="@mipmap/icon_dropdown"
+                android:paddingLeft="@dimen/d5"
+                android:paddingRight="@dimen/d5" />
 
         </LinearLayout>
 
@@ -88,21 +90,22 @@
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_currency_key"
+            android:layout_marginBottom="@dimen/d10"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
             android:layout_toRightOf="@+id/tv_balance_key"
             android:gravity="center|right"
-            android:layout_marginBottom="@dimen/d10"
             android:textColor="@color/orange_yellow"
             tools:text="0" />
+
         <ProgressBar
             android:id="@+id/pb_balance"
             android:layout_width="@dimen/d20"
             android:layout_height="@dimen/d20"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_currency_key"
-            android:layout_marginTop="@dimen/d16"
             android:layout_marginRight="@dimen/d5"
+            android:layout_marginTop="@dimen/d16"
             android:gravity="center|right"
             android:indeterminateTint="@color/orange_yellow"
             android:visibility="gone" />
@@ -155,8 +158,8 @@
         <Button
             android:id="@+id/btnSendEmail"
             style="@style/btn_style"
-            android:layout_marginTop="@dimen/d20"
             android:layout_marginBottom="@dimen/d20"
+            android:layout_marginTop="@dimen/d20"
             android:text="@string/send_email" />
     </LinearLayout>
 
