--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,5 +44,6 @@
     <color name="gradual_change_start">#F3E7E9</color>
     <color name="gradual_change_end">#E3EEFF</color>
     <color name="orange_yellow">#F5A623</color>
+    <color name="grey_capture">#661d2124</color>
 
 </resources>
