--- a/app/src/main/res/layout/aty_check_wallet_info.xml
+++ b/app/src/main/res/layout/aty_check_wallet_info.xml
@@ -64,16 +64,9 @@
                 style="@style/black_text_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/d5"
+                android:drawablePadding="@dimen/d5"
+                android:drawableRight="@mipmap/icon_dropdown"
                 android:textSize="@dimen/text_size_12" />
-
-            <Button
-                android:id="@+id/btn_select_currency"
-                android:layout_width="@dimen/d17"
-                android:layout_height="@dimen/d17"
-                android:background="@mipmap/icon_dropdown"
-                android:paddingLeft="@dimen/d5"
-                android:paddingRight="@dimen/d5" />
 
         </LinearLayout>
 
