--- a/app/src/main/res/layout/pop_show_amount.xml
+++ b/app/src/main/res/layout/pop_show_amount.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/bg_white_style"
+    style="@style/bg_grey_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,7 +9,7 @@
         android:id="@+id/tv_amount"
         style="@style/item_text_style"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/d5"
+        android:layout_margin="@dimen/d2"
         android:ellipsize="middle"
         android:gravity="center"
         android:textColor="@color/orange_yellow" />
