--- a/app/src/main/res/layout/frg_main.xml
+++ b/app/src/main/res/layout/frg_main.xml
@@ -7,6 +7,7 @@
 
     <RelativeLayout
         style="@style/bg_gradual_change_style"
+        android:layout_marginTop="@dimen/d20"
         android:layout_weight="1.1">
 
         <TextView
