--- a/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="@dimen/d60"
         android:orientation="vertical">
 
-        <io.bcaas.view.PrivateKeyEditText
+        <io.bcaas.view.PasswordEditText
             android:id="@+id/pketPwd"
             android:layout_width="match_parent"
             android:layout_height="@dimen/d80"
@@ -29,7 +29,7 @@
             android:layout_marginTop="@dimen/d16"
             android:background="@color/title_black10" />
 
-        <io.bcaas.view.PrivateKeyEditText
+        <io.bcaas.view.PasswordEditText
             android:id="@+id/pketConfirmPwd"
             android:layout_width="match_parent"
             android:layout_height="@dimen/d80"
