--- a/app/src/main/res/layout/aty_insert_address.xml
+++ b/app/src/main/res/layout/aty_insert_address.xml
@@ -53,6 +53,7 @@
     <Button
         android:id="@+id/btn_save"
         style="@style/btn_style"
+        android:enabled="false"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
