--- a/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
@@ -50,6 +50,7 @@
         android:id="@+id/btn_sure"
         style="@style/btn_style"
         android:layout_marginLeft="@dimen/d12"
+        android:enabled="false"
         android:layout_marginRight="@dimen/d12"
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/d30"
