--- a/app/src/main/res/layout/layout_bcaas_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_dialog.xml
@@ -28,7 +28,7 @@
 
     <Button
         android:id="@+id/btn_sure"
-        style="@style/btn_style"
+        style="@style/default_btn_style"
         android:layout_width="@dimen/d100"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -40,7 +40,7 @@
 
     <Button
         android:id="@+id/btn_cancel"
-        style="@style/btn_style"
+        style="@style/default_btn_style"
         android:layout_width="@dimen/d100"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
