--- a/app/src/main/res/layout/frg_receive.xml
+++ b/app/src/main/res/layout/frg_receive.xml
@@ -10,17 +10,16 @@
         android:id="@+id/ivQRCode"
         android:layout_width="@dimen/d200"
         android:layout_height="@dimen/d200"
-        android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_gravity="center" />
 
     <TextView
         android:id="@+id/tvMyAddress"
         style="@style/item_text_style"
         android:layout_gravity="center"
-        android:ellipsize="middle"
         android:layout_marginLeft="@dimen/d32"
         android:layout_marginRight="@dimen/d32"
         android:layout_marginTop="@dimen/d5"
+        android:ellipsize="middle"
         android:gravity="center" />
 
 
