--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -1,208 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/d16"
-    android:layout_marginTop="@dimen/d12">
+    android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/rl_amount_info"
-        style="@style/bg_gradual_change_style"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/tv_address_key"
-            style="@style/black_text_style"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="center_vertical"
-            android:text="@string/my_account" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/d16"
+        android:layout_marginTop="@dimen/d12"
+        android:background="@color/theme_grey">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:id="@+id/rl_amount_info"
+            style="@style/bg_gradual_change_style"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/d20"
-            android:layout_marginLeft="@dimen/d20"
-            android:layout_marginTop="@dimen/d20"
-            android:layout_toRightOf="@+id/tv_address_key"
-            android:gravity="right|center_vertical">
+            android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/tv_account_address_value"
+                android:id="@+id/tv_address_key"
                 style="@style/black_text_style"
-                android:layout_alignParentRight="true"
-                android:ellipsize="middle"
-                android:gravity="center|right"
-                android:textColor="@color/value_black70" />
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:text="@string/my_account" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_account_address_value"
-                android:layout_marginTop="@dimen/d16"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginLeft="@dimen/d20"
+                android:layout_marginTop="@dimen/d20"
+                android:layout_toRightOf="@+id/tv_address_key"
+                android:gravity="right|center_vertical">
 
                 <TextView
-                    android:id="@+id/tv_balance_key"
+                    android:id="@+id/tv_account_address_value"
                     style="@style/black_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right|center_vertical"
-                    android:text="@string/balance"
-                    android:textSize="@dimen/text_size_12" />
+                    android:layout_alignParentRight="true"
+                    android:ellipsize="middle"
+                    android:gravity="center|right"
+                    android:textColor="@color/value_black70" />
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginLeft="@dimen/d5"
-                    android:gravity="right|center_vertical"
-                    android:minWidth="@dimen/d50">
+                    android:layout_below="@+id/tv_account_address_value"
+                    android:layout_marginTop="@dimen/d16"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_balance"
+                        android:id="@+id/tv_balance_key"
                         style="@style/black_text_style"
                         android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right|center_vertical"
+                        android:text="@string/balance"
+                        android:textSize="@dimen/text_size_12" />
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center_vertical"
                         android:layout_marginLeft="@dimen/d5"
                         android:gravity="right|center_vertical"
-                        android:maxWidth="@dimen/d100"
-                        android:textSize="@dimen/text_size_12"
-                        tools:text="0.000000" />
+                        android:minWidth="@dimen/d50">
 
-                    <ProgressBar
-                        android:id="@+id/pb_balance"
-                        android:layout_width="@dimen/d15"
+                        <TextView
+                            android:id="@+id/tv_balance"
+                            style="@style/black_text_style"
+                            android:layout_width="wrap_content"
+                            android:layout_marginLeft="@dimen/d5"
+                            android:gravity="right|center_vertical"
+                            android:maxWidth="@dimen/d100"
+                            android:textSize="@dimen/text_size_12"
+                            tools:text="0.000000" />
+
+                        <ProgressBar
+                            android:id="@+id/pb_balance"
+                            android:layout_width="@dimen/d15"
+                            android:layout_height="@dimen/d15"
+                            android:layout_marginLeft="@dimen/d5"
+                            android:layout_marginRight="@dimen/d5"
+                            android:gravity="right|center_vertical"
+                            android:indeterminateTint="@color/orange_yellow"
+                            android:visibility="gone" />
+                    </RelativeLayout>
+
+
+                    <View
+                        android:id="@+id/v_vertical_line"
+                        android:layout_width="@dimen/d1"
                         android:layout_height="@dimen/d15"
-                        android:layout_marginLeft="@dimen/d5"
-                        android:layout_marginRight="@dimen/d5"
+                        android:layout_below="@+id/tv_account_address_value"
+                        android:layout_margin="@dimen/d2"
+                        android:layout_toRightOf="@+id/tv_balance"
+                        android:background="@color/title_black30" />
+
+                    <TextView
+                        android:id="@+id/tv_currency_key"
+                        style="@style/black_text_style"
+                        android:layout_width="wrap_content"
                         android:gravity="right|center_vertical"
-                        android:indeterminateTint="@color/orange_yellow"
-                        android:visibility="gone" />
-                </RelativeLayout>
+                        android:text="@string/currency"
+                        android:textSize="@dimen/text_size_12" />
 
+                    <TextView
+                        android:id="@+id/tv_currency"
+                        style="@style/black_text_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/d5"
+                        android:drawableRight="@mipmap/icon_dropdown"
+                        android:textSize="@dimen/text_size_12" />
+                </LinearLayout>
+            </RelativeLayout>
 
-                <View
-                    android:id="@+id/v_vertical_line"
-                    android:layout_width="@dimen/d1"
-                    android:layout_height="@dimen/d15"
-                    android:layout_below="@+id/tv_account_address_value"
-                    android:layout_margin="@dimen/d2"
-                    android:layout_toRightOf="@+id/tv_balance"
-                    android:background="@color/title_black30" />
-
-                <TextView
-                    android:id="@+id/tv_currency_key"
-                    style="@style/black_text_style"
-                    android:layout_width="wrap_content"
-                    android:gravity="right|center_vertical"
-                    android:text="@string/currency"
-                    android:textSize="@dimen/text_size_12" />
-
-                <TextView
-                    android:id="@+id/tv_currency"
-                    style="@style/black_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="@dimen/d5"
-                    android:drawableRight="@mipmap/icon_dropdown"
-                    android:textSize="@dimen/text_size_12" />
-            </LinearLayout>
         </RelativeLayout>
 
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_transaction_info"
+            style="@style/bg_white_style"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rl_amount_info">
 
-    <RelativeLayout
-        android:id="@+id/rl_transaction_info"
-        style="@style/bg_white_style"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rl_amount_info">
+            <TextView
+                android:id="@+id/tv_transaction_block_title"
+                style="@style/black_text_style"
+                android:layout_marginTop="@dimen/d20"
+                android:text="@string/receive_account" />
 
-        <TextView
-            android:id="@+id/tv_transaction_block_title"
-            style="@style/black_text_style"
+            <View
+                android:id="@+id/v_line"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d1"
+                android:layout_below="@+id/tv_transaction_block_title"
+                android:layout_marginBottom="@dimen/d16"
+                android:layout_marginTop="@dimen/d10"
+                android:background="@color/title_black30" />
+
+            <TextView
+                android:id="@+id/tv_account_address_key"
+                style="@style/black_text_style"
+                android:layout_below="@+id/v_line"
+                android:text="@string/account_address" />
+
+            <TextView
+                android:id="@+id/tv_select_address"
+                android:layout_width="@dimen/d32"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/tv_account_address_key"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/v_line"
+                android:drawablePadding="@dimen/d5"
+                android:drawableRight="@mipmap/icon_dropdown"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_size_14" />
+
+            <EditText
+                android:id="@+id/et_input_destination_address"
+                style="@style/edit_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_account_address_key"
+                android:ellipsize="middle"
+                android:hint="@string/please_input_destination_address" />
+
+            <View
+                android:id="@+id/v_line_2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d1"
+                android:layout_below="@+id/et_input_destination_address"
+                android:layout_marginTop="@dimen/d10"
+                android:background="@color/title_black10" />
+
+            <TextView
+                android:id="@+id/tv_transaction_amount_key"
+                style="@style/black_text_style"
+                android:layout_below="@+id/v_line_2"
+                android:layout_marginTop="@dimen/d16"
+                android:inputType="number"
+                android:text="@string/transaction_amount" />
+
+            <EditText
+                android:id="@+id/et_transaction_amount"
+                style="@style/edit_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_transaction_amount_key"
+                android:layout_marginBottom="@dimen/d16"
+                android:layout_marginTop="@dimen/d16"
+                android:hint="@string/please_input_transaction_amount"
+                android:inputType="numberDecimal"
+                android:textColor="@color/orange_yellow"
+                android:textSize="@dimen/text_size_18" />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/btn_send"
+            style="@style/btn_style"
+            android:layout_below="@+id/rl_transaction_info"
+            android:layout_marginBottom="@dimen/d10"
+            android:layout_marginLeft="@dimen/d12"
+            android:layout_marginRight="@dimen/d12"
             android:layout_marginTop="@dimen/d20"
-            android:text="@string/receive_account" />
-
-        <View
-            android:id="@+id/v_line"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d1"
-            android:layout_below="@+id/tv_transaction_block_title"
-            android:layout_marginBottom="@dimen/d16"
-            android:layout_marginTop="@dimen/d10"
-            android:background="@color/title_black30" />
-
-        <TextView
-            android:id="@+id/tv_account_address_key"
-            style="@style/black_text_style"
-            android:layout_below="@+id/v_line"
-            android:text="@string/account_address" />
-
-        <TextView
-            android:id="@+id/tv_select_address"
-            android:layout_width="@dimen/d32"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/tv_account_address_key"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/v_line"
-            android:drawablePadding="@dimen/d5"
-            android:drawableRight="@mipmap/icon_dropdown"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_size_14" />
-
-        <EditText
-            android:id="@+id/et_input_destination_address"
-            style="@style/edit_text_style"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_account_address_key"
-            android:ellipsize="middle"
-            android:hint="@string/please_input_destination_address" />
-
-        <View
-            android:id="@+id/v_line_2"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d1"
-            android:layout_below="@+id/et_input_destination_address"
-            android:layout_marginTop="@dimen/d10"
-            android:background="@color/title_black10" />
-
-        <TextView
-            android:id="@+id/tv_transaction_amount_key"
-            style="@style/black_text_style"
-            android:layout_below="@+id/v_line_2"
-            android:layout_marginTop="@dimen/d16"
-            android:inputType="number"
-            android:text="@string/transaction_amount" />
-
-        <EditText
-            android:id="@+id/et_transaction_amount"
-            style="@style/edit_text_style"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_transaction_amount_key"
-            android:layout_marginBottom="@dimen/d16"
-            android:layout_marginTop="@dimen/d16"
-            android:hint="@string/please_input_transaction_amount"
-            android:inputType="numberDecimal"
-            android:textColor="@color/orange_yellow"
-            android:textSize="@dimen/text_size_18" />
-
+            android:enabled="false"
+            android:text="@string/send" />
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/btn_send"
-        style="@style/btn_style"
-        android:layout_below="@+id/rl_transaction_info"
-        android:layout_marginBottom="@dimen/d10"
-        android:layout_marginLeft="@dimen/d12"
-        android:layout_marginRight="@dimen/d12"
-        android:layout_marginTop="@dimen/d20"
-        android:enabled="false"
-        android:text="@string/send" />
-</RelativeLayout>
+</LinearLayout>
 
 
