--- a/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/d80"
             android:layout_marginTop="@dimen/d20"
-            bcaas:hint="@string/set_pwd_for_import_wallet"
+            bcaas:hint="@string/setpwd"
             bcaas:title="@string/input_pwd" />
 
         <View
