--- a/app/src/main/res/layout/aty_create_wallet.xml
+++ b/app/src/main/res/layout/aty_create_wallet.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/d16"
         android:paddingLeft="@dimen/d4"
+        android:visibility="invisible"
         android:text="@string/remember_password"
         android:textColor="@color/red_da261f"
         android:textSize="@dimen/text_size_12" />
