交易數額輸入異常修改 -暫時滿足整數交易 -暫時沒做限額

--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -193,7 +193,7 @@
                 android:layout_marginBottom="@dimen/d16"
                 android:layout_marginTop="@dimen/d16"
                 android:hint="@string/please_input_transaction_amount"
-                android:inputType="numberDecimal"
+                android:inputType="number"
                 android:textColor="@color/orange_yellow"
                 android:textSize="@dimen/text_size_18" />
 
