--- a/app/src/main/res/layout/aty_create_wallet.xml
+++ b/app/src/main/res/layout/aty_create_wallet.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme_grey"
+    android:id="@+id/ll_create_wallet"
     android:orientation="vertical">
 
     <include layout="@layout/inc_header" />
