--- a/app/src/main/res/layout/activity_language_switch.xml
+++ b/app/src/main/res/layout/activity_language_switch.xml
@@ -6,7 +6,7 @@
     android:background="@color/theme_grey"
     android:orientation="vertical">
 
-    <include layout="@layout/inc_header" />
+    <include layout="@layout/include_header" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_setting"
