--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -7,7 +7,7 @@
     android:id="@+id/ll_create_wallet"
     android:orientation="vertical">
 
-    <include layout="@layout/inc_header" />
+    <include layout="@layout/include_header" />
 
     <LinearLayout
         style="@style/bg_white_style"
