--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/aty_brand"
+        layout="@layout/activity_brand"
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
         android:layout_weight="1.3" />
@@ -25,7 +25,7 @@
             android:text="@string/password" />
 
         <include
-            layout="@layout/inc_et_private_key"
+            layout="@layout/include_edittext_private_key"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_password_key"
