首次進入首頁，標題顯示“Bcaas”改為“首頁”修復

--- a/app/src/main/res/layout/layout_bcaas_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_dialog.xml
@@ -3,6 +3,7 @@
     android:layout_width="@dimen/d299"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/d20"
+    android:background="@drawable/bg_white"
     android:padding="@dimen/d20">
 
     <TextView
