--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,7 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/btn_unlock_wallet"
             android:layout_marginLeft="@dimen/d12"
+            android:padding="@dimen/d5"
             android:layout_marginTop="@dimen/d20"
             android:text="@string/create_new_wallet"
             android:textColor="@color/red_da261f"
@@ -57,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:padding="@dimen/d5"
             android:layout_below="@+id/btn_unlock_wallet"
             android:layout_marginRight="@dimen/d12"
             android:layout_marginTop="@dimen/d20"
