--- a/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
@@ -21,8 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/d80"
             android:layout_marginTop="@dimen/d20"
-            bcaas:hint="@string/setpwd"
-            bcaas:title="@string/input_pwd" />
+            bcaas:hint="@string/password_rule_of_length"
+            bcaas:title="@string/input_password" />
 
         <View
             android:layout_width="match_parent"
