--- a/app/src/main/res/layout/layout_private_key_edittext.xml
+++ b/app/src/main/res/layout/layout_private_key_edittext.xml
@@ -19,7 +19,7 @@
             style="@style/edit_text_style"
             android:layout_centerVertical="true"
             android:layout_marginTop="@dimen/d10"
-            android:hint="@string/input_pwd"
+            android:hint="@string/input_password"
             android:inputType="textPassword"
             android:maxLength="8"
             android:paddingRight="@dimen/d40" />
