--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -36,7 +36,7 @@
             android:layout_marginBottom="@dimen/d16"
             android:layout_marginTop="@dimen/d16"
             bcaas:hint="@string/please_input_password_again"
-            bcaas:title="@string/confirm_pwd" />
+            bcaas:title="@string/confirm_password" />
 
 
     </LinearLayout>
