--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -12,7 +12,8 @@
     <RelativeLayout
         style="@style/bg_white_style"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingRight="@dimen/d5">
 
         <TextView
             android:id="@+id/tv_address_key"
@@ -20,20 +21,21 @@
             android:layout_marginTop="@dimen/d16"
             android:text="@string/my_account_address" />
 
-        <ImageButton
-            android:id="@+id/ib_copy"
-            android:layout_width="@dimen/d12"
-            android:layout_height="@dimen/d12"
+        <Button
+            android:id="@+id/btn_copy"
+            android:layout_width="@dimen/d18"
+            android:layout_height="@dimen/d18"
             android:layout_alignBottom="@+id/tv_address_key"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/icon_copy" />
+            android:background="@mipmap/icon_copy"
+            android:padding="@dimen/d4" />
 
         <TextView
             android:id="@+id/tv_account_address_value"
             style="@style/black_text_style"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
-            android:layout_toLeftOf="@+id/ib_copy"
+            android:layout_toLeftOf="@+id/btn_copy"
             android:layout_toRightOf="@+id/tv_address_key"
             android:ellipsize="middle"
             android:gravity="center|right"
